code tweaks